syntax = "proto3";
import "cell_entities.proto";

message DateTypeOption {
    DateFormat date_format = 1;
    TimeFormat time_format = 2;
    bool include_time = 3;
}
message DateChangesetPayload {
    CellIdentifierPayload cell_identifier = 1;
    oneof one_of_date { string date = 2; };
    oneof one_of_time { string time = 3; };
}
enum DateFormat {
    Local = 0;
    US = 1;
    ISO = 2;
    Friendly = 3;
}
enum TimeFormat {
    TwelveHour = 0;
    TwentyFourHour = 1;
}
